--- a/package.json
+++ b/package.json
@@ -1,13 +1,31 @@
 {
   "name": "vite-project",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
+    "dev": "vite",
+    "lint": "npm run lint:js && tsc",
+    "lint-staged": "lint-staged",
+    "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx ",
+    "lint:fix": "eslint --fix --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src",
+    "lint:js": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src",
+    "prepare": "husky install",
+    "prettier": "prettier --check --write \"src/**/*\"",
     "preview": "vite preview"
   },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": "npm run lint-staged:js",
+    "**/*.{js,jsx,tsx,ts,css,less,scss,sass,md,json}": [
+      "prettier --write"
+    ]
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ],
   "dependencies": {
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
@@ -19,10 +37,24 @@
     "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.1.17",
+    "@types/node": "^14.14.37",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/parser": "^5.10.0",
+    "@umijs/fabric": "^2.5.6",
     "@vitejs/plugin-react": "^3.0.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^7",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
+  },
+  "engines": {
+    "node": ">=12.2.0"
   }
 }
