--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc && vite build",
-    "dev": "vite",
+    "dev": "vite --host",
     "lint": "npm run lint:js && tsc",
     "lint-staged": "lint-staged",
     "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx ",
@@ -32,9 +32,11 @@
     "@emotion/styled": "^11.10.5",
     "ethers": "^5.7.2",
     "framer-motion": "^8.5.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "recharts": "^2.3.2"
   },
   "devDependencies": {
     "@types/babel__core": "^7.1.17",
