--- a/package.json
+++ b/package.json
@@ -30,12 +30,16 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@tanstack/react-table": "^8.7.9",
+    "axios": "^1.3.1",
     "ethers": "^5.7.2",
     "framer-motion": "^8.5.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jazzicon": "^1.0.4",
     "react-router-dom": "^6.8.0",
+    "react-select": "^5.7.0",
     "recharts": "^2.3.2"
   },
   "devDependencies": {
