--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@tanstack/react-table": "^8.7.9",
+    "ahooks": "^3.7.4",
     "axios": "^1.3.1",
     "ethers": "^5.7.2",
     "framer-motion": "^8.5.4",
