--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "axios": "^1.3.1",
     "ethers": "^5.7.2",
     "framer-motion": "^8.5.4",
+    "less": "^4.1.3",
     "lodash": "^4.17.21",
+    "rc-pagination": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jazzicon": "^1.0.4",
