--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "@emotion/styled": "^11.10.5",
     "ahooks": "^3.7.4",
     "axios": "^1.3.1",
+    "bignumber.js": "^9.1.1",
+    "dayjs": "^1.11.7",
     "ethers": "^5.7.2",
     "framer-motion": "^8.5.4",
     "less": "^4.1.3",
-    "lodash": "^4.17.21",
     "rc-pagination": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -58,6 +59,7 @@
     "eslint-plugin-import": "^2.25.4",
     "husky": ">=6",
     "lint-staged": ">=10",
+    "lodash": "^4.17.21",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   },
