--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@types/babel__core": "^7.1.17",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^14.14.37",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
@@ -59,7 +60,7 @@
     "eslint-plugin-import": "^2.25.4",
     "husky": ">=6",
     "lint-staged": ">=10",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   },
