--- a/.env.staging
+++ b/.env.staging
@@ -1,2 +1,4 @@
 DOMAIN=https://xbank.plus/
 VITE_CURRENT_ENV=STAGING
+VITE_XBANK_CONTRACT_ADDRESS=0x3ed06e155eb4135ecc1591142cce51c90b0d1047
+VITE_WETH_CONTRACT_ADDRESS=0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6
