--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,4 @@ DOMAIN=https://xbank.plus/
 VITE_CURRENT_ENV=PRODUCTION
 VITE_XBANK_CONTRACT_ADDRESS=0xf1C0C369025f010735b8A91D4089Fcea2c7f7936
 VITE_WETH_CONTRACT_ADDRESS=0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6
+VITE_BASE_URL=https://xbank.plus
