--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jazzicon": "^1.0.4",
+    "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.8.0",
     "react-select": "^5.7.0"
   },
@@ -50,6 +51,7 @@
     "@types/babel__core": "^7.1.17",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^14.14.37",
+    "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/parser": "^5.10.0",
@@ -63,6 +65,7 @@
     "husky": ">=6",
     "lint-staged": ">=10",
     "lodash-es": "^4.17.21",
+    "numeral": "^2.0.6",
     "tinify": "^1.7.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
