--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "axios": "^1.3.1",
     "bignumber.js": "^9.1.1",
     "dayjs": "^1.11.7",
-    "ethers": "^5.7.2",
     "framer-motion": "^8.5.4",
     "less": "^4.1.3",
     "rc-pagination": "^3.2.0",
@@ -45,7 +44,8 @@
     "react-jazzicon": "^1.0.4",
     "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.8.0",
-    "react-select": "^5.7.0"
+    "react-select": "^5.7.0",
+    "web3": "^1.8.2"
   },
   "devDependencies": {
     "@types/babel__core": "^7.1.17",
