--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "ahooks": "^3.7.4",
+    "alchemy-sdk": "^2.5.0",
     "axios": "^1.3.1",
     "bignumber.js": "^9.1.1",
     "dayjs": "^1.11.7",
