--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.8.0",
     "react-select": "^5.7.0",
+    "video-react": "^0.16.0",
     "web3": "^1.8.2"
   },
   "devDependencies": {
@@ -54,6 +55,7 @@
     "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/video-react": "^0.15.1",
     "@typescript-eslint/parser": "^5.10.0",
     "@umijs/fabric": "^2.5.6",
     "@vitejs/plugin-react": "^3.0.0",
