--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ VITE_CURRENT_ENV=DEVELOPMENT
 VITE_XBANK_CONTRACT_ADDRESS=0x267493626dc64852c4e3EC301eCA9B03Cb79adF1
 VITE_WETH_CONTRACT_ADDRESS=0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6
 VITE_BASE_URL=https://xbank.global
+VITE_TARGET_CHAIN_ID=0x5
+VITE_TARGET_CHAIN_BASE_URL=https://goerli.etherscan.io/address/
