--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "not ie <= 10"
   ],
   "dependencies": {
+    "@apollo/client": "3.7.1",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -37,6 +38,7 @@
     "bignumber.js": "^9.1.1",
     "dayjs": "^1.11.7",
     "framer-motion": "^8.5.4",
+    "graphql": "^16.6.0",
     "less": "^4.1.3",
     "rc-pagination": "^3.2.0",
     "react": "^18.2.0",
