--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "ahooks": "^3.7.4",
     "axios": "^1.3.1",
     "bignumber.js": "^9.1.1",
+    "buffer": "^6.0.3",
     "dayjs": "^1.11.7",
+    "events": "^3.3.0",
     "framer-motion": "^8.5.4",
     "less": "^4.1.3",
+    "process": "^0.11.10",
     "rc-pagination": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,8 +49,9 @@
     "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.8.0",
     "react-select": "^5.7.0",
+    "util": "^0.12.5",
     "video-react": "^0.16.0",
-    "web3": "^1.8.2"
+    "web3": "^4.0.1-alpha.5"
   },
   "devDependencies": {
     "@types/babel__core": "^7.1.17",
@@ -68,6 +73,7 @@
     "lint-staged": ">=10",
     "lodash-es": "^4.17.21",
     "numeral": "^2.0.6",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "tinify": "^1.7.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
