--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:staging": "tsc && vite build --mode staging",
     "compress": "node tinyfy.js",
     "dev": "vite --host",
+    "gencode": "graphql-codegen --config codegen.yml",
     "lint": "npm run lint:js && tsc",
     "lint-staged": "lint-staged",
     "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx ",
@@ -51,6 +52,9 @@
     "web3": "^1.8.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^3.2.2",
+    "@graphql-codegen/client-preset": "^2.1.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/babel__core": "^7.1.17",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^14.14.37",
