--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "framer-motion": "^8.5.4",
     "graphql": "^16.6.0",
     "less": "^4.1.3",
+    "p-limit": "^4.0.0",
     "rc-pagination": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -61,6 +62,7 @@
     "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/tiny-async-pool": "^2.0.0",
     "@types/video-react": "^0.15.1",
     "@typescript-eslint/parser": "^5.10.0",
     "@umijs/fabric": "^2.5.6",
