--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DOMAIN=https://xbank.global/
 VITE_CURRENT_ENV=DEVELOPMENT
-VITE_XBANK_CONTRACT_ADDRESS=0xce05cbaB28810be4219a29f291e95F622f4655AF
+VITE_XBANK_CONTRACT_ADDRESS=0xC93Ae9646a621aD66ae251e436Ee0a052a2D9dD6
 VITE_WETH_CONTRACT_ADDRESS=0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6
-VITE_BASE_URL=https://xbank.global
+VITE_BASE_URL=
 VITE_TARGET_CHAIN_ID=0x5
 VITE_TARGET_CHAIN_BASE_URL=https://goerli.etherscan.io
