--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:staging": "tsc && vite build --mode staging",
     "compress": "node tinyfy.js",
     "dev": "vite --host",
+    "gencode": "graphql-codegen --config codegen.yml",
     "lint": "npm run lint:js && tsc",
     "lint-staged": "lint-staged",
     "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx ",
@@ -29,6 +30,7 @@
     "not ie <= 10"
   ],
   "dependencies": {
+    "@apollo/client": "3.7.1",
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -37,7 +39,9 @@
     "bignumber.js": "^9.1.1",
     "dayjs": "^1.11.7",
     "framer-motion": "^8.5.4",
+    "graphql": "^16.6.0",
     "less": "^4.1.3",
+    "p-limit": "^4.0.0",
     "rc-pagination": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -49,12 +53,16 @@
     "web3": "^1.8.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^3.2.2",
+    "@graphql-codegen/client-preset": "^2.1.1",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/babel__core": "^7.1.17",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^14.14.37",
     "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/tiny-async-pool": "^2.0.0",
     "@types/video-react": "^0.15.1",
     "@typescript-eslint/parser": "^5.10.0",
     "@umijs/fabric": "^2.5.6",
