--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "numeral": "^2.0.6",
     "tinify": "^1.7.1",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-compression": "^0.5.1"
   },
   "engines": {
     "node": ">=12.2.0"
