--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "framer-motion": "^8.5.4",
     "graphql": "^16.6.0",
     "less": "^4.1.3",
+    "lottie-react": "^2.4.0",
     "p-limit": "^4.0.0",
     "rc-pagination": "^3.2.0",
     "react": "^18.2.0",
