feat: add env var

--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,7 @@ VITE_WETH_CONTRACT_ADDRESS=0xB4FBF271143F4FBf7B91A5ded31805e42b2208d6
 VITE_BASE_URL=https://xbank.plus
 VITE_TARGET_CHAIN_ID=0x1
 VITE_TARGET_CHAIN_BASE_URL=https://etherscan.io
+VITE_TWITTER_CLIENT_ID=UnBqSnFPcUpLbWZfTG5JbnFLdVY6MTpjaQ
+VITE_TWITTER_CLIENT_SECRET=IAvLacTv25XfqZZ_YCJ2S84JP_tn3bkKZw1s33xg4fGt3_DNx8
+VITE_TWITTER_API_KEY=pk2YDAb7AoXvVnTbC1NLYmDFQ
+VITE_TWITTER_API_KEY_SECRET=G0PztqnKdLC3Ofdquvi5nKRr40S3fWlQdJLYjx9sPtGXACQxYc
